[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["salehmmasri <salehalmasri494@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
